invite + create-question functionality. Using real data for gameplay question

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -35,6 +35,12 @@
     margin-left: 147px;
     overflow-y: scroll;
   }
+
+  .card {
+    border: 3px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px black;
+  }
 </style>
 
 <style id="side-bar-styles">
