--- a/ui/templates/results.html
+++ b/ui/templates/results.html
@@ -86,45 +86,47 @@
 <div id="subcontainer">
   <div id="vote-counts">
 
+    {{ range .Data }}
     <div class="item">
       <div class="answer">
-        Blue
+        {{ .AnswerText }}
       </div>
       <div class="votes">
-        105
+        {{ .Votes }}
       </div>
     </div>
+    {{ end }}
 
 
-    <div class="item">
-      <div class="answer">
-        Green
-      </div>
-      <div class="votes">
-        84
-      </div>
-    </div>
-
-
-
-    <div class="item">
-      <div class="answer">
-        Purple
-      </div>
-      <div class="votes">
-        37
-      </div>
-    </div>
-
-
-    <div class="item">
-      <div class="answer">
-        Yellow
-      </div>
-      <div class="votes">
-        15
-      </div>
-    </div>
+    <!-- <div class="item"> -->
+    <!--   <div class="answer"> -->
+    <!--     Green -->
+    <!--   </div> -->
+    <!--   <div class="votes"> -->
+    <!--     84 -->
+    <!--   </div> -->
+    <!-- </div> -->
+    <!---->
+    <!---->
+    <!---->
+    <!-- <div class="item"> -->
+    <!--   <div class="answer"> -->
+    <!--     Purple -->
+    <!--   </div> -->
+    <!--   <div class="votes"> -->
+    <!--     37 -->
+    <!--   </div> -->
+    <!-- </div> -->
+    <!---->
+    <!---->
+    <!-- <div class="item"> -->
+    <!--   <div class="answer"> -->
+    <!--     Yellow -->
+    <!--   </div> -->
+    <!--   <div class="votes"> -->
+    <!--     15 -->
+    <!--   </div> -->
+    <!-- </div> -->
 
   </div>
 
