working through large restructuring

--- a/ui/templates/create-question.html
+++ b/ui/templates/create-question.html
@@ -67,7 +67,7 @@
 <div id="page-content" hx-ext="response-targets">
   <div id="content-container">
     <h1 id="create-question-title">
-      Create a Question
+      It's your turn to write a question!
     </h1>
     <form id="create-question-form" hx-post="/auth/games/game/questions?game-id={{ .GameId }}" hx-target="#page-content"
       hx-target-error="closest .error">
