--- a/ui/templates/results.html
+++ b/ui/templates/results.html
@@ -84,6 +84,10 @@
 </style>
 
 <div id="subcontainer">
+
+  {{ if not .AnswersData }}
+  <div>Check back later for responses!</div>
+  {{ else }}
   <div id="vote-counts">
 
     {{ range .AnswersData }}
@@ -100,6 +104,7 @@
 
 
   </div>
+  {{ end }}
 
 
   <div id="results-right">
