--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -108,7 +108,7 @@
       Games
     </h1>
 
-    <button hx-get="/auth/games/ui/create-game" hx-target="#page-content" hx-push-url="true">
+    <button hx-get="/auth/games/create-game" hx-target="#page-content" hx-push-url="true">
       + Create New Game
     </button>
 
@@ -128,7 +128,7 @@
         <td>What is the best day of the week?</td>
       </tr>
       {{ range .CurrentGames }}
-      <tr hx-get="/auth/games/game/play/{{ .GameId }}" hx-target="#page-content" hx-push-url="true">
+      <tr hx-get="/auth/games/{{ .GameId }}" hx-target="#page-content" hx-push-url="true">
         <td>{{ .GameName}}</td>
         <td>{{ .GameTotalMembers}}</td>
         <td></td>
