--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -108,7 +108,7 @@
       Games
     </h1>
 
-    <button hx-get="/auth/games/create-game" hx-target="#page-content" hx-push-url="true">
+    <button hx-get="/auth/games/create" hx-target="#page-content" hx-push-url="true">
       + Create New Game
     </button>
 
