--- a/ui/templates/invite-friends.html
+++ b/ui/templates/invite-friends.html
@@ -1,41 +1,42 @@
 {{ define "invite-friends" }}
 
-<style>
-  #page-content {
-    display: flex;
-    padding: 40px;
-    flex-direction: column;
-    justify-content: start;
-    gap: 15px;
-  }
+<div id="page-content">
+  <style>
+    #page-content {
+      display: flex;
+      padding: 40px;
+      flex-direction: column;
+      justify-content: start;
+      gap: 15px;
+    }
 
-  h1 {
-    font-family: Cheto;
-  }
+    h1 {
+      font-family: Cheto;
+    }
 
-  #next-button {
-    align-self: end;
-  }
+    #next-button {
+      align-self: end;
+    }
 
-  #next-button:hover {
-    background-color: seagreen;
-  }
+    #next-button:hover {
+      background-color: seagreen;
+    }
 
-  #next-button:active {
-    transform: scale(0.95);
-  }
-</style>
+    #next-button:active {
+      transform: scale(0.95);
+    }
+  </style>
 
 
-<h1>
-  Invite Your Friends
-</h1>
+  <h1>
+    Invite Your Friends
+  </h1>
 
-{{ template "search-bar" . }}
+  {{ template "search-bar" . }}
 
-<button id="next-button" hx-get="/auth/games/game/ui/create-question?game-id={{ .GameId }}" hx-target="#page-content"
-  hx-push-url="true">
-  Next
-</button>
-
+  <button id="next-button" hx-get="/auth/games/{{ .GameId }}/create-question" hx-target="#page-content"
+    hx-push-url="true">
+    Next
+  </button>
+</div>
 {{ end }}
