--- a/ui/templates/sign-in.html
+++ b/ui/templates/sign-in.html
@@ -72,7 +72,7 @@
   <span id="sign-in-title">
     Sign In
   </span>
-  <form id="sign-in-form" hx-post="/login" hx-target="#page-content" hx-swap="outerHTML" hx-push-url="true">
+  <form id="sign-in-form" hx-post="/login" hx-target="#page-content" hx-swap="outerHTML">
     <div class="item">
       <label for="username">
         Username{{ .Username}}
