game invites fixed. triggers when new game created or player added to game

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -113,6 +113,8 @@
       {{ template "invite-friends" .Data}}
       {{ else if eq .PartialTemplate "results"}}
       {{ template "results" .Data }}
+      {{ else if eq .PartialTemplate "no-question-yet"}}
+      {{ template "no-question-yet" .Data }}
       {{ else }}
       {{ template "index"}}
       {{ end }}
