--- a/ui/templates/search-results.html
+++ b/ui/templates/search-results.html
@@ -7,8 +7,8 @@
 
 <tr>
   <th>
-    <div class="user-container" hx-get="/auth/friends/profiles/{{ .UserId }}" hx-target="#page-content"
-      hx-trigger="click">
+    <div class="user-container" {{ if eq $gameId -1 }} hx-get="/auth/friends/profiles/{{ .UserId }}"
+      hx-target="#page-content" hx-trigger="click" {{ else }} {{ end }}>
 
       <div class="photo-container">
         <img class="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
