improved profile and friends/profile/:user-id pages. Correct on full-page reload as well

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -115,6 +115,8 @@
       {{ template "results" .Data }}
       {{ else if eq .PartialTemplate "no-question-yet"}}
       {{ template "no-question-yet" .Data }}
+      {{ else if eq .PartialTemplate "other-user-profile" }}
+      {{ template "other-user-profile" .Data }}
       {{ else }}
       {{ template "index"}}
       {{ end }}
