--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -127,28 +127,28 @@
   </h1>
   <div id="profile-subcontainer">
     <div id="user-info">
-      <div class="info-item">
-        <span>
-          Member since:
-        </span>
-        <span>
-          June 1st, 2024
-        </span>
-      </div>
+      <!-- <div class="info-item"> -->
+      <!--   <span> -->
+      <!--     Member since: -->
+      <!--   </span> -->
+      <!--   <span> -->
+      <!--     June 1st, 2024 -->
+      <!--   </span> -->
+      <!-- </div> -->
       <div class="info-item">
         <span>
           Total Points:
         </span>
         <span>
-          56489
+          {{ .TotalPoints }}
         </span>
       </div>
       <div class="info-item">
         <span>
-          Streak:
+          Friends:
         </span>
         <span>
-          15 days
+          {{ .NumFriends }}
         </span>
       </div>
       <div class="info-item">
@@ -156,12 +156,12 @@
           Current Games:
         </span>
         <span>
-          4
+          {{ .NumGames }}
         </span>
       </div>
       <div class="info-item">
         <span>Email:</span>
-        <span>jmarren99@gmail.com</span>
+        <span>{{ .Email }}</span>
       </div>
 
       <button id="log-out-button" hx-post="/auth/profile/logout" hx-target="#page-content" hx-swap="innerHTML">
